updated README.MD file

--- a/coordi/templates/coordi/studentDashboard.html
+++ b/coordi/templates/coordi/studentDashboard.html
@@ -15,7 +15,7 @@
                 <p><b>{{newAssignments}}</b> New Assignments</p>
             {% endif %}
             <h2>My Assignments</h2>
-            <p>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.</p>
+            <p>Review all current and past assignments and begin working with one click.</p>
             <button class="btn btn-primary btn-teacher">
                 <a href="{% url 'assignments_student' %}">Start Working</a>
             </button>
@@ -23,7 +23,7 @@
         <div>
             <p class="upper"><span class="notification">{{newGrades}}</span> New Grades</p>
             <h2>My Grades</h2>
-            <p>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.</p>
+            <p>Central place to preview all grades and reflect on academic performance.</p>
             <button class="btn btn-primary btn-teacher">
                 <a href="{% url 'grades_student' %}">Review Grades</a>
             </button>
@@ -31,7 +31,7 @@
         <div>
             <p class="upper">Holistic Insights & Data</p>
             <h2>My Profile</h2>
-            <p>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.</p>
+            <p>Outlines of the overall academic progress and performance metrics.</p>
             <button class="btn btn-primary btn-teacher">
                 <a href="{% url 'profile_student' %}">Evaluate</a>
             </button>
