--- a/coordi/templates/coordi/teacherDashboard.html
+++ b/coordi/templates/coordi/teacherDashboard.html
@@ -10,7 +10,7 @@
         <div>
             <p>Insights</p>
             <h2>My Classroom</h2>
-            <p>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.</p>
+            <p>A list of all assignments, organized by student performance metrics.</p>
             <button class="btn btn-primary btn-teacher">
                 <a href="{% url 'classroom' %}">Student Profiles</a>
             </button>
@@ -27,7 +27,7 @@
             
             <p>Assignments</p>
             <h2>{{toGradeCount}} Assignments to Grade</h2>
-            <p>Wilson Dokidis, Leo Aminoff, Emery Korsgaard hace submitted assignments for you to grade</p>
+            <p>A quick overview of all assignments and their current stage in the educational process.</p>
             <button class="btn btn-primary btn-teacher">
                 <a href="{% url 'grades' %}">Review</a>
             </button>
