improving responsive aspects

--- a/coordi/templates/coordi/layout.html
+++ b/coordi/templates/coordi/layout.html
@@ -28,6 +28,6 @@
     
     {% block body %}
     {% endblock %}
-     
+    <script src="{% static 'coordi/nav.js' %}"></script>
     </body>
 </html>
