--- a/coordi/static/coordi/styles.css
+++ b/coordi/static/coordi/styles.css
@@ -69,6 +69,8 @@ h1 {
     font-size: 1.5rem;
     font-weight: 500;
     margin-bottom: 30px;
+    z-index: 1;
+    position: relative;
 }
 
 h2 {
@@ -115,6 +117,7 @@ button, input {
     padding: 3px;
     font-size: 16px;
     letter-spacing: 0.3px;
+    margin-top: auto;
 }
 
 .btn-edit,
@@ -187,12 +190,12 @@ button, input {
 .grid-profile,
 .grid-assignments {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 20px;
 }
 
 .grid-profile {
-    grid-template-columns: 1fr 1fr 1fr 1fr; 
+    grid-template-columns: 1fr 1fr; 
     list-style-type: none;
     padding-left: 0px;
 }
@@ -240,12 +243,14 @@ button, input {
 
 .grid-profile div {
     background: var(--color-assignments-teacher);
+    height: 100%;
 }
 
 .grid-profile p {
     font-weight: 600;
     font-size: xx-large;
     text-align: center;
+    margin-top: auto;
 } 
 
 .grid-dash div:first-child,
@@ -524,5 +529,53 @@ textarea {
     text-transform: uppercase;
 }
 
+@media (min-width: 750px) {
+    .grid-dash,
+    .grid-profile,
+    .grid-assignments {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 
+    .grid-profile {
+        grid-template-columns: 1fr 1fr 1fr 1fr; 
+        list-style-type: none;
+        padding-left: 0px;
+    }
+}
+
+@media (min-width: 530px) and (max-width: 749px) {
+    .grid-dash,
+    .grid-profile,
+    .grid-assignments {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 400px) {
+    .grid-profile {
+        grid-template-columns: 1fr; 
+    }
+}
+
+@media (max-width: 650px) {
+    #icon {
+        position: absolute; 
+        top: 20px;
+        right: 3%;
+        color: white;
+    }
+    .navbar-nav {
+        display: none;
+    }
+}
+
+@media (min-width: 650px) {
+    #icon {
+        display: none;
+    }
+
+    .navbar-nav {
+        display: flex;
+    }
+}
 
